# wagtail-allauth

./: LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
src/app_wagtail/: apps.py  models.py
src/app_wagtail/tests/: test_models.py  test_views.py
src/wagtail_allauth/: apps.py
