[project]
name = "wagtail-allauth"
version = "0.1.0"
description = "Allauth integration for Wagtail CMS."
readme = "README.md"
authors = [
    { name = "Yousef Abu Shanab", email = "93343012+youzarsiph@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = ["django>=6.0.2", "django-allauth>=65.16.0", "wagtail>=7.3.1"]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["django-debug-toolbar>=6.2.0", "ruff>=0.15.0"]
